--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_demo.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_demo.html
@@ -58,12 +58,12 @@ body {
 		<header wicket:id="header"></header>
 		<div class="" wicket:id="navbar">Navbar... (see Navbar.html)</div>
 		<div class="row">
-		<div class="sidebar-categories col-lg-3" wicket:id="sidebarColumn">
+		<div class="sidebar-categories" wicket:id="sidebarColumn">
 			<div wicket:id="sidebarBlocks">[sidebarBlocks]</div>
 		</div>
 		<!--/span-->
 
-		<div wicket:id="contentColumn" class="content-column col-lg-9">
+		<div wicket:id="contentColumn" class="content-column">
 			<div wicket:id="afterHeader" class="afterHeader">
 				<!-- 		Carousel Images is loading.. -->
 			</div>
