--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_garbini.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_garbini.html
@@ -59,25 +59,26 @@ body {
 	<div wicket:id="afterHeader" class="afterHeader">
 		<!-- 		Carousel Images is loading.. -->
 	</div>
-	<div class="container">
-		<div class="row">
-		<div class="col-sm-3 sidebar" wicket:id="sidebarColumn">
-			<div wicket:id="sidebarBlocks">[sidebarBlocks]</div>
+	<section id="content">
+		<div class="container">
+			<div class="row">
+				<div class="sidebar" wicket:id="sidebarColumn">
+					<div wicket:id="sidebarBlocks">[sidebarBlocks]</div>
+				</div>
+				<div wicket:id="contentColumn" class="content-column">
+					<div wicket:id="addedInfo"></div>
+					<div wicket:id="feedback" class="feedback"></div>
+					<wicket:child>
+						<ol class="featured-products">
+							<div id="featuredProducts">
+								<li><a href="#">Product name</a></li>
+							</div>
+						</ol>
+					</wicket:child>
+				</div>
+			</div>
 		</div>
-
-		<div wicket:id="contentColumn" class="content-column col-sm-9">
-			<div wicket:id="addedInfo"></div>
-			<div wicket:id="feedback" class="feedback"></div>
-			<wicket:child>
-				<ol class="featured-products">
-					<div id="featuredProducts">
-						<li><a href="#">Product name</a></li>
-					</div>
-				</ol>
-			</wicket:child>
-		</div>
-		</div>
-	</div>
+	</section>
 	<footer class="footer" wicket:id="footer">
 		<small style="color: #808080;"> &middot; &copy; <a
 			href="http://www.soluvas.com/">Soluvas</a> 2012
