BC-1943 logo in backend

--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/backend/BackendPage.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/backend/BackendPage.html
@@ -25,7 +25,8 @@
         <!--logo start-->
         <div class="brand">
           <a wicket:id="homePageLink" class="logo">
-            <img alt="" wicket:id="logoImg" src="{+imagesUri}tenant_common/logo_web.png"/>
+            <img alt="Brand" wicket:id="logoImg" src="{+imagesUri}tenant_common/logo_web.png"
+            	style="max-width: 180px; max-height: 50px;"/>
           </a>
           <div class="sidebar-toggle-box">
             <div class="fa fa-bars"></div>
