BC-1943 ManagePage logo

--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/backend/ManagePage.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/backend/ManagePage.html
@@ -26,7 +26,8 @@
         <div class="brand">
 
           <a href="index-2.html" class="logo">
-<!--             <img src="http://i1104.photobucket.com/albums/h339/bippo_id/logo_web_zps7250a313.jpg~original" alt=""/> -->
+<!--             <img src="http://i1104.photobucket.com/albums/h339/bippo_id/logo_web_zps7250a313.jpg~original" alt="Bippo Commerce" title="Bippo Commerce"
+				style="max-width: 180px; max-height: 50px;"/> -->
           </a>
           <div class="sidebar-toggle-box">
             <div class="fa fa-bars"></div>
