--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_loom.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_loom.html
@@ -60,11 +60,12 @@ body {
 		<!-- 		Carousel Images is loading.. -->
 	</div>
 	<section id="content">
-		<div class="container">
+		<div class="container inner">
 			<div class="row">
 				<div class="sidebar" wicket:id="sidebarColumn">
 					<div wicket:id="sidebarBlocks">[sidebarBlocks]</div>
 				</div>
+				 <div class="divide70"></div>
 				<div wicket:id="contentColumn" class="content-column">
 					<div wicket:id="addedInfo"></div>
 					<div wicket:id="feedback" class="feedback"></div>
