--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_loom.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_loom.html
@@ -56,17 +56,17 @@ body {
 	<div wicket:id="dev">[DebugBar]</div>
 	<header wicket:id="header"></header>
 	<div class="" wicket:id="navbar">Navbar... (see Navbar.html)</div>
-	<div wicket:id="afterHeader" class="afterHeader">
-		<!-- 		Carousel Images is loading.. -->
-	</div>
+	<div class="offset"></div>
 	<section id="content">
-		<div class="container inner">
+		<div class="container">
 			<div class="row">
 				<div class="sidebar" wicket:id="sidebarColumn">
 					<div wicket:id="sidebarBlocks">[sidebarBlocks]</div>
 				</div>
-				 <div class="divide70"></div>
 				<div wicket:id="contentColumn" class="content-column">
+					<div wicket:id="afterHeader" class="afterHeader">
+						<!-- 		Carousel Images is loading.. -->
+					</div>
 					<div wicket:id="addedInfo"></div>
 					<div wicket:id="feedback" class="feedback"></div>
 					<wicket:child>
