--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_loom.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_loom.html
@@ -58,7 +58,7 @@ body {
 	<div class="" wicket:id="navbar">Navbar... (see Navbar.html)</div>
 	<div class="offset"></div>
 	<section id="content">
-		<div class="container">
+		<div class="container inner">
 			<div class="row">
 				<div class="sidebar" wicket:id="sidebarColumn">
 					<div wicket:id="sidebarBlocks">[sidebarBlocks]</div>
