--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
@@ -53,17 +53,16 @@ body {
 
 	<header wicket:id="header"></header>
 	<div class="container">
-		<div class="" wicket:id="navbar">Navbar... (see Navbar.html)</div>
+		<div class="row">
+			<div class="col-md-12">
+				<div class="" wicket:id="navbar">Navbar... (see Navbar.html)</div>
+			</div>
+		</div>
 	</div>
 	<div class="container">
 		<div style="display: none;" wicket:id="addedInfo"></div>
 	</div>
 	<div class="container">
-		<!-- 		    <ul class="breadcrumb"> -->
-		<!-- 			    <li><a href="#">Home</a> <span class="divider">/</span></li> -->
-		<!-- 			    <li><a href="#">Library</a> <span class="divider">/</span></li> -->
-		<!-- 			    <li class="active">Data</li> -->
-		<!-- 		    </ul> -->
 		<div class="row">
 			<div class="col-md-3 sidebar-categories" wicket:id="sidebarColumn">
 				<div wicket:id="sidebarBlocks">[sidebarBlocks]</div>
@@ -83,34 +82,6 @@ body {
 					</ol>
 				</wicket:child>
 			</div>
-			<!-- 					<div> -->
-			<!-- 						<small> -->
-			<!-- 					 	<ul class="styles"> -->
-			<!-- 					 	  <li><b>Live Chat</b></li> -->
-			<!-- 					   	  <li><span id="LiveChat_1376906919"></span></li> -->
-			<!-- 					   	  <hr> -->
-			<!-- 					   	  <li><b>Sms</b></li> -->
-			<!-- 					   	  <li>08112225702</li> -->
-			<!-- 					   	  <hr> -->
-			<!-- 						  <li><b>Call</b></li> -->
-			<!-- 						  <li>022-5228987</li> -->
-			<!-- 						  <li>022-70686080</li> -->
-			<!-- 						  <li>0815720393259</li> -->
-			<!-- 						  <li>082119216047</li> -->
-			<!-- 						  <li>087821353690</li> -->
-			<!-- 					   	  <hr> -->
-			<!-- 					      <li><b>Bbm</b></li> -->
-			<!-- 					      <li>24C5DBE3</li> -->
-			<!-- 					      <hr> -->
-			<!-- 					      <li><b>Ym</b></li> -->
-			<!-- 					      <li>Tuneeca / CS_Tuneeca</li> -->
-			<!-- 						</ul> -->
-			<!-- 						</small> -->
-			<!-- 						<a class="styles-open"  href="#closeoptions">  </a> -->
-			<!-- 						 <div class="styles-closed " > -->
-			<!-- 							<a href="#options"></a> -->
-			<!-- 						</div> -->
-			<!-- 					</div> -->
 		</div>
 		<!--/row-->
 
