--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
@@ -64,12 +64,12 @@ body {
 	</div>
 	<div class="container">
 		<div class="row">
-			<div class="col-md-3 sidebar-categories" wicket:id="sidebarColumn">
+			<div class="col-sm-3 col-md-3 sidebar-categories top-md-30" wicket:id="sidebarColumn">
 				<div wicket:id="sidebarBlocks">[sidebarBlocks]</div>
 			</div>
 			<!--/span-->
 
-			<div class="col-md-9" wicket:id="contentColumn">
+			<div class="top-md-30" wicket:id="contentColumn">
 				<div wicket:id="afterHeader" class="afterHeader">
 					<!-- 		Carousel Images is loading.. -->
 				</div>
