--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
@@ -69,7 +69,7 @@ body {
 			</div>
 			<!--/span-->
 
-			<div class="top-md-30" wicket:id="contentColumn">
+			<div wicket:id="contentColumn">
 				<div wicket:id="afterHeader" class="afterHeader">
 					<!-- 		Carousel Images is loading.. -->
 				</div>
