--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_garbinipurple.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_garbinipurple.html
@@ -36,7 +36,7 @@ body {
 	rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Oswald:300'
 	rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Abel' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Anaheim' rel='stylesheet' type='text/css'>
 <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
 <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
