new JS libraries

--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_queen.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_queen.html
@@ -55,7 +55,7 @@ body {
 <body>
 	<div wicket:id="dev">[DebugBar]</div>
 	<header wicket:id="header"></header>
-	<div class="" wicket:id="navbar">Navbar... (see Navbar.html)</div>
+	<header id="header" wicket:id="navbar">Navbar... (see Navbar.html)</header>
 	<div wicket:id="afterHeader" class="afterHeader">
 		<!-- 		Carousel Images is loading.. -->
 	</div>
