--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_queen.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_queen.html
@@ -59,10 +59,10 @@ body {
 	<div wicket:id="afterHeader" class="afterHeader">
 		<!-- 		Carousel Images is loading.. -->
 	</div>
-	<section id="content">
+	<section id="content" class="contentMarginTop">
 		<div class="container">
 			<div class="row">
-				<div wicket:id="contentColumn" class="content-column">
+				<div wicket:id="contentColumn" class="content-column col-sm-6 col-md-12">
 					<div wicket:id="addedInfo"></div>
 					<div wicket:id="feedback" class="feedback"></div>
 					<wicket:child>
@@ -74,7 +74,7 @@ body {
 				
 					</wicket:child>
 				</div>
-				<div class="sidebar" wicket:id="sidebarColumn">
+				<div class="sidebar col-xs-12 col-sm-6 col-md-3 col-lg-3 text-center" wicket:id="sidebarColumn">
 					<div wicket:id="sidebarBlocks">[sidebarBlocks]</div>
 				</div>
 			</div>
