--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
@@ -59,10 +59,7 @@ body {
 			</div>
 		</div>
 	</div>
-	<div class="container">
-		<div style="display: none;" wicket:id="addedInfo"></div>
-	</div>
-	<div class="container">
+	<div class="container top-md-20">
 		<div class="row">
 			<div class="col-sm-3 col-md-3 sidebar-categories top-md-30" wicket:id="sidebarColumn">
 				<div wicket:id="sidebarBlocks">[sidebarBlocks]</div>
