--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_inggabia.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_inggabia.html
@@ -64,7 +64,7 @@ body {
 	</div>
 	<div class="row clearfix f-space30"></div>
 	<div class="container">
-		<div wicket:id="contentColumn">
+		<div wicket:id="contentColumn" class="paddingProductGrid">
 			<div class="sidebar-categories" wicket:id="sidebarColumn">
 				<div wicket:id="sidebarBlocks">[sidebarBlocks]</div>
 			</div>
