--- a/login/src/main/java/org/soluvas/web/login/DedicatedLoginPanel.html
+++ b/login/src/main/java/org/soluvas/web/login/DedicatedLoginPanel.html
@@ -1,24 +1,32 @@
 <wicket:panel>
-	<div class="row">
-		<div class="span4 offset4">
-			<div class="well">
-				<legend>Sign In</legend>
-				<form wicket:id="formSignIn" class="formSignIn" id="formSignIn">
-				<input class="span3" placeholder="Username" type="text" name="username" wicket:id="userName">
-				<input class="span3" placeholder="Password" type="password" name="password" wicket:id="password">
+<div class="row">
+	<div class="col-xs-12 col-md-8 col-md-offset-2">
+		<div class="well">
+			<legend>Sign In</legend>
+			<form wicket:id="formSignIn" class="formSignIn" id="formSignIn" role="form">
+				<div class="form-group">
+					<div class="col-sm-6">
+						<input class="form-control" placeholder="Email or username" type="text" name="username" wicket:id="userName">
+					</div>
+				</div>
+				<div class="form-group">
+					<div class="col-sm-6">
+						<input class="form-control" placeholder="Password" type="password" name="password" wicket:id="password">
+					</div>
+				</div>
 				<br/>
-				<label style="margin-bottom: 15px; padding-top: 5px;" class="checkbox">
-					<input style="float: left; margin-right: 10px;" type="checkbox" name="remember" wicket:id="rememberMe">
-					Remember Me</label>
-				<input class="btn btn-primary btn-block" id="signIn" value="Sign In" wicket:id="login">
-				<label style="text-align:center;">or</label>
-				<a class="btn btn-primary btn-block"  href="#" wicket:id="btnLoginWithFb">Sign In with Facebook</a>
+				<div class="form-group">
+					<label style="margin-bottom: 15px; padding-top: 5px;">
+						<input style="margin-right: 10px;" type="checkbox" name="remember" wicket:id="rememberMe">
+						Remember Me</label>
+					<input class="btn btn-primary btn-block" id="signIn" value="Sign In" wicket:id="login">
+				</div>
+				<label wicket:id="socialLoginLabel" style="text-align:center;">or</label>
+				<a class="btn btn-primary btn-block" href="#" wicket:id="btnLoginWithFb">Sign In with Facebook</a>
 				<a class="btn btn-primary btn-block" href="#" wicket:id="btnLoginWithTwitter" id="sign-in-twitter">Sign In with Twitter</a>
 				<a class="btn btn-primary btn-block" href="#" wicket:id="btnLoginWithGoogle" id="sign-in-google">Sign In with Google</a>
-				</form>
-			</div>
+			</form>
 		</div>
 	</div>
-
+</div>
 </wicket:panel>
-
