--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_inggabia.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_inggabia.html
@@ -64,7 +64,8 @@ body {
 	</div>
 	<div class="row clearfix f-space30"></div>
 	<div class="container">
-		<div wicket:id="contentColumn" class="col-sm-12 col-md-12">
+	<div class="row">
+		<div wicket:id="contentColumn" class="col-sm-12 col-md-12 box-block">
 			<div class="sidebar-categories" wicket:id="sidebarColumn">
 				<div wicket:id="sidebarBlocks">[sidebarBlocks]</div>
 			</div>
@@ -77,6 +78,7 @@ body {
 					</div>
 				</ol>
 			</wicket:child>
+		</div>
 		</div>
 	</div>
 	<footer class="footer" wicket:id="footer">
