--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_glammy.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_glammy.html
@@ -70,8 +70,8 @@ body {
 			<div wicket:id="dev">[DebugBar]</div>
 			<header wicket:id="header"></header>
 			<header>
-				<div class="" wicket:id="navbar">Navbar... (see Navbar.html)</div>
-			</header><!-- //HEADER -->			
+				<div wicket:id="navbar">Navbar... (see Navbar.html)</div>
+			</header>
 			<div wicket:id="afterHeader" class="afterHeader">
 				<!-- 		Carousel Images is loading.. -->
 			</div>
