--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_glammy.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_glammy.html
@@ -76,6 +76,7 @@ body {
 				<!-- 		Carousel Images is loading.. -->
 			</div>
 			<section id="content">
+				<div class="container">
 					<div class="row">
 						<div class="sidebar" wicket:id="sidebarColumn">
 							<div wicket:id="sidebarBlocks">[sidebarBlocks]</div>
@@ -92,6 +93,7 @@ body {
 							</wicket:child>
 						</div>
 					</div>
+				</div>
 			</section>
 			<footer class="footer" wicket:id="footer">
 				<small style="color: #808080;"> &middot; &copy; <a
