pagination to top

--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_glammy.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_glammy.html
@@ -75,7 +75,7 @@ body {
 			<div wicket:id="afterHeader" class="afterHeader">
 				<!-- 		Carousel Images is loading.. -->
 			</div>
-			<section id="content">
+			<section id="content" style="margin-top: 100px;">
 				<div class="container">
 					<div class="row">
 						<div class="sidebar" wicket:id="sidebarColumn">
