--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_glammy.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_glammy.html
@@ -70,12 +70,12 @@ body {
 			<div wicket:id="dev">[DebugBar]</div>
 			<header wicket:id="header"></header>
 			<header>
-				<div wicket:id="navbar">Navbar... (see Navbar.html)</div>
+					<div wicket:id="navbar">Navbar... (see Navbar.html)</div>
 			</header>
 			<div wicket:id="afterHeader" class="afterHeader">
 				<!-- 		Carousel Images is loading.. -->
 			</div>
-			<section id="content" style="margin-top: 100px;">
+			<section id="content">
 				<div class="container">
 					<div class="row">
 						<div class="sidebar" wicket:id="sidebarColumn">
