--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_glammy.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_glammy.html
@@ -78,7 +78,7 @@ body {
 			<section id="content">
 				<div class="container">
 					<div class="row">
-						<div class="sidebar" wicket:id="sidebarColumn">
+						<div id="sidebar" class="sidebar col-lg-3 col-sm-3 padbot50" wicket:id="sidebarColumn">
 							<div wicket:id="sidebarBlocks">[sidebarBlocks]</div>
 						</div>
 						<div wicket:id="contentColumn" class="content-column">
