--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_chrome.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_chrome.html
@@ -30,10 +30,11 @@
 	
 		<div class="row">
 		<header wicket:id="header"></header>
-		<div class="" wicket:id="navbar">Navbar... (see Navbar.html)</div>
+		<div wicket:id="navbar">Navbar... (see Navbar.html)</div>
 		</div>
-		<div class="container">
+		
 		<div class="row">
+		<div class="container">
 			<div class="sidebar-categories" wicket:id="sidebarColumn">
 				<div wicket:id="sidebarBlocks">[sidebarBlocks]</div>
 			</div>
