--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_chrome.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_chrome.html
@@ -28,13 +28,11 @@
 	
 	<div class="container-fluid">
 	
-		<div class="row">
 		<header wicket:id="header"></header>
 		<div wicket:id="navbar">Navbar... (see Navbar.html)</div>
-		</div>
 		
-		<div class="row">
-		<div id="content">
+		
+		<div class="row content">
 			<div class="sidebar-categories" wicket:id="sidebarColumn">
 				<div wicket:id="sidebarBlocks">[sidebarBlocks]</div>
 			</div>
@@ -54,7 +52,7 @@
 					</ol>
 				</wicket:child>
 			</div>
-			</div>   
+		   
 		</div>
 		<div class="clearfix"></div>
 		
