--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_trends.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_trends.html
@@ -31,21 +31,21 @@
 </head>
 
 <body>
-	<div class="page">
+	<div id="page">
 		<div wicket:id="dev">[DebugBar]</div>
 		<header wicket:id="header"></header>
-		<div class="" wicket:id="navbar">Navbar... (see Navbar.html)</div>
+		<div class="navbar navbar-fixed-top" wicket:id="navbar">Navbar... (see Navbar.html)</div>
 		<div class="row">
 			<div class="sidebar-categories" wicket:id="sidebarColumn">
 				<div wicket:id="sidebarBlocks">[sidebarBlocks]</div>
 			</div>
 			<!--/span-->
 
-			<div wicket:id="contentColumn" class="content-column">
-				<div class="col-xs-6">
-				<div wicket:id="afterHeader" class="afterHeader">
-					<!--Carousel Images is loading.. -->
-				</div>
+			<div wicket:id="contentColumn" class="">
+				<div class="">
+					<div wicket:id="afterHeader" class="row">
+						<!--Carousel Images is loading.. -->
+					</div>
 				</div>
 				<div wicket:id="addedInfo"></div>
 				<div wicket:id="feedback" class="feedback"></div>
