--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_inggabia.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_inggabia.html
@@ -58,40 +58,36 @@ body {
 	<div class="" wicket:id="navbar">Navbar... (see Navbar.html)</div>
 	<!--/span-->
 	<div class="container">
-		<div wicket:id="afterHeader" class="afterHeader">
+		<div wicket:id="afterHeader">
 			<!-- 		Carousel Images is loading.. -->
 		</div>
 	</div>
-	<div class="row clearfix f-space30"></div>
 	<div class="container">
-	<div class="row">
-	
-	
-	
-		<div wicket:id="contentColumn" class="col-sm-12 col-md-12 box-block">
-			<div class="sidebar-categories" wicket:id="sidebarColumn">
-				<div wicket:id="sidebarBlocks">[sidebarBlocks]</div>
+		<div class="row">
+			<div wicket:id="contentColumn" class="col-sm-12 col-md-12">
+				<div class="sidebar-categories" wicket:id="sidebarColumn">
+					<div wicket:id="sidebarBlocks">[sidebarBlocks]</div>
+				</div>
+				<div wicket:id="addedInfo"></div>
+				<div wicket:id="feedback" class="feedback"></div>
+				<wicket:child>
+					<ol class="featured-products">
+						<div id="featuredProducts">
+							<li><a href="#">Product name</a></li>
+						</div>
+					</ol>
+				</wicket:child>
 			</div>
-			<div wicket:id="addedInfo"></div>
-			<div wicket:id="feedback" class="feedback"></div>
-			<wicket:child>
-				<ol class="featured-products">
-					<div id="featuredProducts">
-						<li><a href="#">Product name</a></li>
-					</div>
-				</ol>
-			</wicket:child>
-		</div>		
+
 		</div>
 	</div>
-	
 
 	<footer class="footer" wicket:id="footer">
 		<small style="color: #808080;"> &middot; &copy; <a
 			href="http://www.soluvas.com/">Soluvas</a> 2012
 		</small>
 	</footer>
-	
+
 	<div class="clearfix"></div>
 
 	<div wicket:id="beforeFooterJs">[beforeFooterJs]</div>
