--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_trends.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_trends.html
@@ -15,10 +15,6 @@
 	<meta name="author" content="Soluvas" />
 	<!-- END META-TAG -->
 
-	<!-- START LINK HREF -->
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300italic,400italic,600,600italic' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Crete+Round' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Oswald:300' rel='stylesheet' type='text/css'>
 	<!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
 	<!--[if lt IE 9]>
     	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -34,7 +30,7 @@
 	<div id="page">
 		<div wicket:id="dev">[DebugBar]</div>
 		<header wicket:id="header"></header>
-		<div class="navbar navbar-fixed-top" wicket:id="navbar">Navbar... (see Navbar.html)</div>
+		<div class="navigation" wicket:id="navbar">Navbar... (see Navbar.html)</div>
 		<div class="row">
 			<div class="sidebar-categories" wicket:id="sidebarColumn">
 				<div wicket:id="sidebarBlocks">[sidebarBlocks]</div>
