styling trends theme

--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_trends.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_trends.html
@@ -28,7 +28,7 @@
 
 <body>
 	<div id="page">
-		<div wicket:id="dev">[DebugBar]</div>
+		<div style="display:none;" wicket:id="dev">[DebugBar]</div>
 		<header wicket:id="header"></header>
 		<div class="navigation" wicket:id="navbar">Navbar... (see Navbar.html)</div>
 		<div class="row">
