--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_garbinipurple.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_garbinipurple.html
@@ -102,6 +102,15 @@ body {
 	</script>
 
 	<wicket:container wicket:id="footer-container" />
+	
+	<div id="fb-root"></div>
+	<script>(function(d, s, id) {
+	  var js, fjs = d.getElementsByTagName(s)[0];
+	  if (d.getElementById(id)) return;
+	  js = d.createElement(s); js.id = id;
+	  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&appId=524563650920052&version=v2.0";
+	  fjs.parentNode.insertBefore(js, fjs);
+	}(document, 'script', 'facebook-jssdk'));</script>
 
 </body>
 </html>
