--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_chrome.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_chrome.html
@@ -33,6 +33,7 @@
 		
 		
 		<div class="row content">
+		<section id="home">
 			<div class="sidebar-categories" wicket:id="sidebarColumn">
 				<div wicket:id="sidebarBlocks">[sidebarBlocks]</div>
 			</div>
@@ -52,7 +53,8 @@
 					</ol>
 				</wicket:child>
 			</div>
-		   
+		</section>
+		
 		</div>
 		<div class="clearfix"></div>
 		
