--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_chrome.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_chrome.html
@@ -32,7 +32,7 @@
 		<div wicket:id="navbar">Navbar... (see Navbar.html)</div>
 		
 		
-		<div class="row content">
+		<div class="container">
 		<section id="home">
 			<div class="sidebar-categories" wicket:id="sidebarColumn">
 				<div wicket:id="sidebarBlocks">[sidebarBlocks]</div>
