fixed for styling

--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_trends.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_trends.html
@@ -27,10 +27,10 @@
 </head>
 
 <body>
-	<div id="page">
+	<div class="container-fluid">
 		<div style="display:none;" wicket:id="dev">[DebugBar]</div>
 		<header wicket:id="header"></header>
-		<div class="navigation" wicket:id="navbar">Navbar... (see Navbar.html)</div>
+		<nav class="navbar navbar-default" wicket:id="navbar">Navbar... (see Navbar.html)</nav>
 		<div class="row">
 			<div class="sidebar-categories" wicket:id="sidebarColumn">
 				<div wicket:id="sidebarBlocks">[sidebarBlocks]</div>
