--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_trends.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_trends.html
@@ -30,14 +30,13 @@
 	<div class="container-fluid">
 		<div style="display:none;" wicket:id="dev">[DebugBar]</div>
 		<header wicket:id="header"></header>
-		<nav class="navbar navbar-default" wicket:id="navbar">Navbar... (see Navbar.html)</nav>
-		<div class="row">
+		<nav class="navbar navbar-default-trends1 navbar-fixed-top" wicket:id="navbar">Navbar... (see Navbar.html)</nav>
 			<div class="sidebar-categories" wicket:id="sidebarColumn">
 				<div wicket:id="sidebarBlocks">[sidebarBlocks]</div>
 			</div>
 			<!--/span-->
 
-			<div wicket:id="contentColumn" class="">
+			<div wicket:id="contentColumn" class="row">
 				<div class="">
 					<div wicket:id="afterHeader" class="row">
 						<!--Carousel Images is loading.. -->
@@ -53,7 +52,6 @@
 					</ol>
 				</wicket:child>
 			</div>
-		</div>
 		<div class="clearfix"></div>
 		<footer class="footer" wicket:id="footer">
 			<small style="color: #808080;"> &middot; &copy; <a
