--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_shopper.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_shopper.html
@@ -53,9 +53,9 @@ body {
 
 <body>
 	<div wicket:id="dev">[DebugBar]</div>
-		<header wicket:id="header">
-		</header>
-		<header class="" wicket:id="navbar">Navbar... (see Navbar.html)</header>
+	<header wicket:id="header">
+	</header>
+	<header class="" wicket:id="navbar">Navbar... (see Navbar.html)</header>
 	<div class="container">
 		<div class="row">
 			<div class="sidebar-categories" wicket:id="sidebarColumn">
@@ -79,12 +79,12 @@ body {
 			</div>
 		</div>
 		<div class="clearfix"></div>
-		<footer class="footer" wicket:id="footer">
-			<small style="color: #808080;"> &middot; &copy; <a
-				href="http://www.soluvas.com/">Soluvas</a> 2012
-			</small>
-		</footer>
 	</div>
+	<footer id="footer" wicket:id="footer">
+		<small style="color: #808080;"> &middot; &copy; <a
+			href="http://www.soluvas.com/">Soluvas</a> 2012
+		</small>
+	</footer>
 	<!--/.fluid-container-->
 
 	<div wicket:id="beforeFooterJs">[beforeFooterJs]</div>
