BC-2458 Optimize Title format
Task-Url: https://idbippo.atlassian.net/browse/BC-2458

--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_demo.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_demo.html
@@ -3,8 +3,7 @@
 <html wicket:id="html" lang="id">
 <head>
 <meta charset="utf-8" />
-<title><span wicket:id="pageTitle" /> <span
-	wicket:id="pageTitleSuffix" /></title>
+<title wicket:id="pageTitle">Keluarga Samara: Bahagiakan Pasangan, Anak, dan Keluarga sesuai Syariah</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta wicket:id="metaDescription" name="description"
 	content="Soluvas Starter Web Application" />
