--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_straight.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_straight.html
@@ -1,10 +1,8 @@
-
 <!DOCTYPE html>
 <html wicket:id="html" lang="id">
 <head>
-	<title><span wicket:id="pageTitle" /><span wicket:id="pageTitleSuffix" /></title>
 	<meta charset="utf-8" />
-
+	<title wicket:id="pageTitle">Keluarga Samara: Bahagiakan Pasangan, Anak, dan Keluarga sesuai Syariah</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta wicket:id="metaDescription" name="description"
 		content="Soluvas Starter Web Application" />
