--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_chrome.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_chrome.html
@@ -3,21 +3,22 @@
 
 <head>
 	
-	<meta charset="utf-8" />
-	
-	<title wicket:id="pageTitle">Keluarga Samara: Bahagiakan Pasangan, Anak, dan Keluarga sesuai Syariah</title>
-	
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<meta wicket:id="metaDescription" name="description" content="Soluvas Starter Web Application" />
-	<meta wicket:id="metaKeywords" name="keywords" content="Soluvas Starter Web Application" />
-	<meta wicket:id="ogTitle" property="og:title" content="The Rock" />
-	<meta wicket:id="ogType" property="og:type" content="video.movie" />
-	<meta wicket:id="ogUrl" property="og:url" content="http://www.imdb.com/title/tt0117500/" />
-	<meta wicket:id="ogImage" property="og:image" content="http://ia.media-imdb.com/images/rock.jpg" />
-	<meta name="author" content="Soluvas" />
+<meta charset="utf-8" />
 
-	<!-- favicon -->
-	<link wicket:id="faviconLink" rel="shortcut icon" href="/favicon.ico" />
+<title wicket:id="pageTitle">Keluarga Samara: Bahagiakan Pasangan, Anak, dan Keluarga sesuai Syariah</title>
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta wicket:id="metaDescription" name="description" content="Soluvas Starter Web Application" />
+<meta wicket:id="metaKeywords" name="keywords" content="Soluvas Starter Web Application" />
+<meta wicket:id="author" name="author" content="Soluvas"/>
+<meta wicket:id="ogTitle" property="og:title" content="The Rock" />
+<meta wicket:id="ogType" property="og:type" content="video.movie" />
+<meta wicket:id="ogUrl" property="og:url" content="http://www.imdb.com/title/tt0117500/" />
+<meta wicket:id="ogImage" property="og:image" content="http://ia.media-imdb.com/images/rock.jpg" />
+<link wicket:id="canonical" rel="canonical" href="http://www.example.com/product.php?item=swedish-fish"/>
+
+<!-- favicon -->
+<link wicket:id="faviconLink" rel="shortcut icon" href="/favicon.ico" />
 
 </head>
 
