--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_straight.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_straight.html
@@ -1,36 +1,32 @@
 <!DOCTYPE html>
 <html wicket:id="html" lang="id">
 <head>
-	<meta charset="utf-8" />
-	<title wicket:id="pageTitle">Keluarga Samara: Bahagiakan Pasangan, Anak, dan Keluarga sesuai Syariah</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<meta wicket:id="metaDescription" name="description"
-		content="Soluvas Starter Web Application" />
-	<meta wicket:id="metaKeywords" name="keywords"
-		content="Soluvas Starter Web Application" />
-	<meta wicket:id="ogTitle" property="og:title" content="The Rock" />
-	<meta wicket:id="ogType" property="og:type" content="video.movie" />
-	<meta wicket:id="ogUrl" property="og:url"
-		content="http://www.imdb.com/title/tt0117500/" />
-	<meta wicket:id="ogImage" property="og:image"
-		content="http://ia.media-imdb.com/images/rock.jpg" />
-	<meta name="author" content="Soluvas" />
+<meta charset="utf-8" />
+<title wicket:id="pageTitle">Keluarga Samara: Bahagiakan Pasangan, Anak, dan Keluarga sesuai Syariah</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta wicket:id="metaDescription" name="description" content="Soluvas Starter Web Application" />
+<meta wicket:id="metaKeywords" name="keywords" content="Soluvas Starter Web Application" />
+<meta wicket:id="author" name="author" content="Soluvas"/>
+<meta wicket:id="ogTitle" property="og:title" content="The Rock" />
+<meta wicket:id="ogType" property="og:type" content="video.movie" />
+<meta wicket:id="ogUrl" property="og:url" content="http://www.imdb.com/title/tt0117500/" />
+<meta wicket:id="ogImage" property="og:image" content="http://ia.media-imdb.com/images/rock.jpg" />
+<link wicket:id="canonical" rel="canonical" href="http://www.example.com/product.php?item=swedish-fish"/>
 
+<link
+	href='http://fonts.googleapis.com/css?family=Open+Sans:400,300italic,400italic,600,600italic'
+	rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Crete+Round'
+	rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Oswald:300'
+	rel='stylesheet' type='text/css'>
+<!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
+<!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
 
-	<link
-		href='http://fonts.googleapis.com/css?family=Open+Sans:400,300italic,400italic,600,600italic'
-		rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Crete+Round'
-		rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Oswald:300'
-		rel='stylesheet' type='text/css'>
-	<!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
-	<!--[if lt IE 9]>
-	      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-	    <![endif]-->
-
-	<!-- Le fav and touch icons -->
-	<link wicket:id="faviconLink" rel="shortcut icon" href="/favicon.ico" />
+<!-- Le fav and touch icons -->
+<link wicket:id="faviconLink" rel="shortcut icon" href="/favicon.ico" />
 </head>
 
 <body>
