--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_fluid.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_fluid.html
@@ -23,7 +23,8 @@
 /*         padding: 9px 0; */
 /*       } */
 </style>	
-<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300italic,400italic,600,600italic' rel='stylesheet' type='text/css'>
+<link href="//fonts.googleapis.com/css?family=Open+Sans:400,300italic,400italic,600,600italic"
+	rel="stylesheet" type="text/css"/>
 
 <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
 <!--[if lt IE 9]>
