--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_garbinitosca.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_garbinitosca.html
@@ -24,14 +24,13 @@ body {
 /*         padding: 9px 0; */
 /*       } */
 </style>
-<link
-	href='http://fonts.googleapis.com/css?family=Open+Sans:400,300italic,400italic,600,600italic'
-	rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Crete+Round'
-	rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Oswald:300'
-	rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Fenix' rel='stylesheet' type='text/css'>
+<link href="//fonts.googleapis.com/css?family=Open+Sans:400,300italic,400italic,600,600italic"
+	rel="stylesheet" type="text/css"/>
+<link href="//fonts.googleapis.com/css?family=Crete+Round"
+	rel="stylesheet" type="text/css"/>
+<link href='//fonts.googleapis.com/css?family=Oswald:300"
+	rel="stylesheet" type="text/css"/>
+<link href="//fonts.googleapis.com/css?family=Fenix" rel="stylesheet" type="text/css"/>
 <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
 <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
