BC-750: SSL Support for Desktop web browsers
Task-Url: https://idbippo.atlassian.net/browse/BC-750

--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_garbinipurple.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_garbinipurple.html
@@ -28,7 +28,7 @@ body {
 	rel="stylesheet" type="text/css"/>
 <link href="//fonts.googleapis.com/css?family=Crete+Round"
 	rel="stylesheet" type="text/css"/>
-<link href='//fonts.googleapis.com/css?family=Oswald:300"
+<link href="//fonts.googleapis.com/css?family=Oswald:300"
 	rel="stylesheet" type="text/css"/>
 <link href="//fonts.googleapis.com/css?family=Anaheim" rel="stylesheet" type="text/css"/>
 <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
