--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_demo.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_demo.html
@@ -28,7 +28,7 @@ body {
 	rel="stylesheet" type="text/css"/>
 <link href="//fonts.googleapis.com/css?family=Crete+Round"
 	rel="stylesheet" type="text/css"/>
-<link href='//fonts.googleapis.com/css?family=Oswald:300"
+<link href="//fonts.googleapis.com/css?family=Oswald:300"
 	rel="stylesheet" type="text/css"/>
 <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
 <!--[if lt IE 9]>
