--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_glammy.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_glammy.html
@@ -28,7 +28,7 @@ body {
 	rel="stylesheet" type="text/css"/>
 <link href="//fonts.googleapis.com/css?family=Crete+Round"
 	rel="stylesheet" type="text/css"/>
-<link href='//fonts.googleapis.com/css?family=Oswald:300"
+<link href="//fonts.googleapis.com/css?family=Oswald:300"
 	rel="stylesheet" type="text/css"/>
 <link href="//fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic"
 	rel="stylesheet" type="text/css"/>
