--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
@@ -26,7 +26,7 @@ body {
 </style>
 <link href="//fonts.googleapis.com/css?family=Open+Sans:400,300italic,400italic,600,600italic"
 	rel="stylesheet" type="text/css"/>
-<link href='//fonts.googleapis.com/css?family=Oswald:300"
+<link href="//fonts.googleapis.com/css?family=Oswald:300"
 	rel="stylesheet" type="text/css"/>
 <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
 <!--[if lt IE 9]>
