--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_elegance.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_elegance.html
@@ -38,24 +38,24 @@
 		<div class="navbar-side">
 		<div id="first-navigator">
 			<ul class="side-nav">
-				<li><a href="">NEW LOOK</a></li>
+				<li><a href="/id/new-arrivals">NEW LOOK</a></li>
 				<li><a href="">COLECTIONS</a></li>
 				<li><a href="">EDITIONS</a></li>
-				<li><a href="">SALE</a></li>
+				<li><a href="/id/sale">SALE</a></li>
 			</ul>
 		</div>
 		<div id="logo">
 			<div class="logo">
-				<a href="#">
+				<a href="/">
 					<img src="img/tenant_common/logo.png" alt="">
 				</a>
 			</div>
 		</div>
 		<div id="second-navigator">
 			<ul class="side-nav">
-				<li><a href="#">CONFIRM PAYMENT</a></li>
-				<li><a href="#">ORDER TRACKING</a></li>
-				<li><a href="/about">ABOUT</a></li>
+				<li><a href="/confirm_payment">CONFIRM PAYMENT</a></li>
+				<li><a href="/detail_order_tracking">ORDER TRACKING</a></li>
+				<li><a href="/id/about">ABOUT</a></li>
 				<li><a href="/contact">CONTACT</a></li>
 			</ul>
 		</div>
