--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_elegance.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_elegance.html
@@ -39,7 +39,7 @@
 		<div id="first-navigator">
 			<ul class="side-nav">
 				<li><a href="/id/new-arrivals">NEW LOOK</a></li>
-				<li><a href="">COLECTIONS</a></li>
+				<li><a href="/id/explore">COLECTIONS</a></li>
 				<li><a href="">EDITIONS</a></li>
 				<li><a href="/id/sale">SALE</a></li>
 			</ul>
