BC-2482 #comment Home now uses appManifest.title for hopefully better SEO  HTML Navigation Breadcrumbs site-wide + schema.org microdata
Task-Url: https://idbippo.atlassian.net/browse/BC-2482

--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/widget/BreadcrumbBar.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/widget/BreadcrumbBar.html
@@ -1,6 +1,6 @@
 <wicket:panel>
 <li itemscope itemtype="http://data-vocabulary.org/Breadcrumb">
-	<a wicket:id="homeLink" itemprop="url"><span itemprop="title"><wicket:message key="home">Home</wicket:message></span></a>
+	<a wicket:id="homeLink" itemprop="url"><span itemprop="title" wicket:id="title">Home</span></a>
 </li>
 <li wicket:id="crumbs" itemscope itemtype="http://data-vocabulary.org/Breadcrumb">
 	<a wicket:id="link" itemprop="url"><span itemprop="title" wicket:id="title">Categories</span></a>
