BC-2565: noindex di meta robots untuk beberapa halaman
Task-Url: https://idbippo.atlassian.net/browse/BC-2565

--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_chrome.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_chrome.html
@@ -16,6 +16,7 @@
 <meta wicket:id="ogUrl" property="og:url" content="http://www.imdb.com/title/tt0117500/" />
 <meta wicket:id="ogImage" property="og:image" content="http://ia.media-imdb.com/images/rock.jpg" />
 <link wicket:id="canonical" rel="canonical" href="http://www.example.com/product.php?item=swedish-fish"/>
+<wicket:container wicket:id="meta"></wicket:container>
 
 <!-- favicon -->
 <link wicket:id="faviconLink" rel="shortcut icon" href="/favicon.ico" />
