--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_mixpic.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_mixpic.html
@@ -14,6 +14,7 @@
 <meta wicket:id="ogUrl" property="og:url" content="http://www.imdb.com/title/tt0117500/" />
 <meta wicket:id="ogImage" property="og:image" content="http://ia.media-imdb.com/images/rock.jpg" />
 <link wicket:id="canonical" rel="canonical" href="http://www.example.com/product.php?item=swedish-fish"/>
+<wicket:container wicket:id="meta"></wicket:container>
 <!-- END META-TAG -->
 
 <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
