display attribute list panel

--- a/site/src/main/java/org/soluvas/web/site/widget/DisplayAttributeListPanel.html
+++ b/site/src/main/java/org/soluvas/web/site/widget/DisplayAttributeListPanel.html
@@ -1,6 +1,7 @@
 <wicket:panel>
 <div wicket:id="attrValues">
-	<dt wicket:id="attrDisplayName">Color</dt>
-	<dd wicket:id="value">Red</dd>
+	<b><span wicket:id="attrDisplayName">Color</span>:</b>
+	<span wicket:id="value">Red</span>
+	<br/>
 </div>
 </wicket:panel>
