BC-2967 #comment term support for translations

--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/term/TermDetailPanel.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/term/TermDetailPanel.html
@@ -20,6 +20,11 @@
 				</header>
 				<div class="panel-body">
 					<form class="form-horizontal" role="form" wicket:id="form" >
+						<div wicket:id="wmcLocales">
+							<div wicket:id="locales">
+								<a class="btn btn-default" wicket:id="btnLocale"><span wicket:id="lblLocale"></span></a>
+							</div>
+						</div>
 						<div class="form-group">
 							<label class="col-lg-2 col-md-3 col-sm-3 control-label" wicket:for="name"><abbr title="(Underscored) Unique Name">UName</abbr> :</label>
                             <div class="col-lg-6 col-md-6 col-sm-9">
