styling tuneeca navbar master

--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
@@ -47,13 +47,12 @@ body {
 	<div wicket:id="dev">[DebugBar]</div>
 
 	<header wicket:id="header"></header>
-	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
 				<div class="" wicket:id="navbar">Navbar... (see Navbar.html)</div>
 			</div>
 		</div>
-	</div>
+		
 	<div class="container top-md-10">
 		<div class="row">
 			<div class="col-sm-3 col-md-3 sidebar-categories top-md-30" wicket:id="sidebarColumn">
@@ -141,5 +140,75 @@ Remarketing tags may not be associated with personally identifiable information 
 <!-- 				src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/989738871/?value=0&amp;guid=ON&amp;script=0" /> -->
 <!-- 		</div> -->
 <!-- 	</noscript> -->
+
+
+<!-- slide menu -->
+
+<script id="jsbin-javascript">
+$(document).ready(function () {
+
+
+    //stick in the fixed 100% height behind the navbar but don't wrap it
+    $('#slide-nav.navbar .container').append($('<div id="navbar-height-col"></div>'));
+
+    // Enter your ids or classes
+    var toggler = '.navbar-toggle';
+    var pagewrapper = '#page-content';
+    var navigationwrapper = '.navbar-header';
+    var menuwidth = '100%'; // the menu inside the slide menu itself
+    var slidewidth = '80%';
+    var menuneg = '-100%';
+    var slideneg = '-80%';
+
+
+    $("#slide-nav").on("click", toggler, function (e) {
+
+        var selected = $(this).hasClass('slide-active');
+
+        $('#slidemenu').stop().animate({
+            left: selected ? menuneg : '0px'
+        });
+
+        $('#navbar-height-col').stop().animate({
+            left: selected ? slideneg : '0px'
+        });
+
+        $(pagewrapper).stop().animate({
+            left: selected ? '0px' : slidewidth
+        });
+
+        $(navigationwrapper).stop().animate({
+            left: selected ? '0px' : slidewidth
+        });
+
+
+        $(this).toggleClass('slide-active', !selected);
+        $('#slidemenu').toggleClass('slide-active');
+
+
+        $('#page-content, .navbar, body, .navbar-header').toggleClass('slide-active');
+
+
+    });
+
+
+    var selected = '#slidemenu, #page-content, body, .navbar, .navbar-header';
+
+
+    $(window).on("resize", function () {
+
+        if ($(window).width() > 767 && $('.navbar-toggle').is(':hidden')) {
+            $(selected).removeClass('slide-active');
+        }
+
+
+    });
+
+
+
+
+});
+</script>
+
 </body>
 </html>
