styling tuneeca navbar

--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
@@ -47,9 +47,11 @@ body {
 	<div wicket:id="dev">[DebugBar]</div>
 
 	<header wicket:id="header"></header>
-	<div class="" wicket:id="navbar">Navbar... (see Navbar.html)</div>
-	<div class="wrapp-all">
-		<div id="page-content">
+	<div class="wrapp-navbar">
+		<div class="" wicket:id="navbar">Navbar... (see Navbar.html)</div>
+	</div>
+	<div class="">
+		<div id="">
 			<div class="container top-md-10">
 				<div class="row">
 					<div class="col-sm-3 col-md-3 sidebar-categories top-md-30" wicket:id="sidebarColumn">
@@ -75,7 +77,7 @@ body {
 		
 			</div>
 			
-			<footer id="page-content" class="footer" wicket:id="footer">
+			<footer class="footer" wicket:id="footer">
 				<small style="color: #808080;"> &middot; &copy; <a
 					href="http://www.soluvas.com/">Soluvas</a> 2012
 				</small>
