styling navbar tuneeca

--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
@@ -44,7 +44,7 @@ body {
 </head>
 
 <body>
-	<div wicket:id="dev">[DebugBar]</div>
+	<div wicket:id="dev" style="display: none;">[DebugBar]</div>
 
 	<header wicket:id="header"></header>
 	<div class="wrapp-navbar">
