styling navbar fixed tuneeca

--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
@@ -213,13 +213,14 @@ $(document).ready(function () {
 </script>
 
 <script type="text/javascript">
-$(window).scroll(function() {
-	if ($(this).scrollTop() > 0) {
-        $('.navbar').addClass('fix');
-    } else {
-        $('.navbar').removeClass('fix');
-    }
-});
+// $(window).scroll(function() {
+// 	if ($(this).scrollTop() > 0) {
+//         $('.navbar').addClass('fix');
+//     } else {
+//         $('.navbar').removeClass('fix');
+//     }
+// });
+
 </script>
 
 </body>
