--- a/login/src/main/java/org/soluvas/web/login/DedicatedLoginPanel.html
+++ b/login/src/main/java/org/soluvas/web/login/DedicatedLoginPanel.html
@@ -19,7 +19,7 @@
 					<label style="margin-bottom: 15px; padding-top: 5px;">
 						<input style="margin-right: 10px;" type="checkbox" name="remember" wicket:id="rememberMe">
 						Remember Me</label>
-					<input class="btn btn-primary btn-block" id="signIn" value="Sign In" wicket:id="login">
+					<button type="submit" class="btn btn-primary btn-block" id="signIn" wicket:id="login">Sign In</button>
 				</div>
 				<label wicket:id="socialLoginLabel" style="text-align:center;">or</label>
 				<a class="btn btn-primary btn-block" href="#" wicket:id="btnLoginWithFb">Sign In with Facebook</a>
